--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ show_testing_output = false
 
 # Mod Information
 # HIGHLY RECOMMEND complying with SemVer for mod_version: https://semver.org/
-mod_version = 2.14.0
+mod_version = 2.15.0
 root_package = com.agricraft
 mod_id = agricraft
 mod_name = AgriCraft
@@ -24,8 +24,8 @@ library_name = InfinityLib
 library_version = 1.12.2
 
 # Mod Metadata (Optional)
-mod_description =
-mod_url =
+mod_description = Agricultural farming extended.
+mod_url = https://github.com/Refitbench/AgriCraft
 mod_update_json =
 # Delimit authors with commas
 mod_authors = InfinityRaider, Rongmario
@@ -58,9 +58,9 @@ publish_with_changelog = ${{ it.file('CHANGELOG.md').exists() }}
 
 # Publishing to CurseForge (Provide secret: CURSEFORGE_TOKEN)
 # To configure dependencies, head to publishing.gradle's curseforge block
-publish_to_curseforge = false
+publish_to_curseforge = true
 # CurseForge project ID must be the numerical ID and not the slug
-curseforge_project_id =
+curseforge_project_id = 1459246
 curseforge_debug = false
 
 # Publishing to Modrinth (Provide secret: MODRINTH_TOKEN), the token must have the `CREATE_VERSION` and `PROJECT_WRITE` permissions
