--- a/gradle/scripts/dependencies.gradle
+++ b/gradle/scripts/dependencies.gradle
@@ -99,6 +99,7 @@ dependencies {
     compileOnly ('com.enderio:EnderIO:1.12.2-5.3.72') {
         transitive = false
     }
+    compileOnly rfg.deobf("curse.maven:hwyla-253449:2568751")
 
     // Example - Dependency descriptor:
     // 'com.google.code.gson:gson:2.8.6' << group: com.google.code.gson, name:gson, version:2.8.6
